# Racing-telemetry

./: .gitignore  README.md  passes_check.py
backend/: pyproject.toml
backend/app/: __init__.py  crud.py  database.py  main.py  schemas.py  settings.py
backend/app/parsers/: __init__.py  session_parser.py
backend/app/routers/: health.py  sessions.py  users.py
backend/app/services/: mock_loader.py  session_storage.py  uploads.py
backend/mock_data/: mock_session.json  mock_session_upload.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: HealthStatus.tsx  LapComparisonPanel.tsx  LapDetailsPage.tsx  LapTable.tsx  SessionSummaryPanel.tsx  TelemetryChartCard.tsx  UploadSession.tsx
frontend/src/hooks/: useLapTelemetry.ts
frontend/src/styles/: index.css
frontend/src/utils/: lapComparison.ts  time.ts
