[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "racing-telemetry-backend"
version = "0.1.0"
description = "FastAPI backend for the racing telemetry dashboard"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1.0",
  "python-multipart>=0.0.9,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
